@@ -3654,6 +3654,7 @@ STR_6453    :Copy version info
 STR_6454    :Can’t rename banner…
 STR_6455    :Can’t rename sign…
 STR_6456    :Giant Screenshot
+STR_6457    :Report a bug on GitHub
 
 #############
 # Scenarios #
