@@ -3909,6 +3909,8 @@ enum
 
     STR_SHORTCUT_GIANT_SCREENSHOT = 6456,
 
+    STR_FILE_BUG_ON_GITHUB = 6457,
+
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
 };
